# AiEngineering_2025-07

./: .gitignore  README.md  pyproject.toml  requirements.txt
D01_Intro/010__NN_from_scratch/: nn_scratch_end.py
D01_Intro/030_ModelingIntroduction/: 00_LinRegFromScratch_end.py  00_lin_reg_wo_model_class.py  exercise_car_price.py
D02_Classification/010_Classification/: andreas_classification3.py  binary_classification.py  iris_classification.py
D02_Classification/30_PyTorchLightning/: PytorchLightning.pptx  lightning_intro_end.py
D03_ComputerVision/AudioClassification/: modeling.py
D03_ComputerVision/BinaryClassification/: CNN_BinaryClassification_start.py  CNN_Binary_Inception_end.py
D03_ComputerVision/ModelFinetuning/: TransferLearning_end.py
D03_ComputerVision/ObjectDetection/: ObjectDetection.py  ObjectDetection_AccuracyMetrics.pptx  ObjectDetection_Intro.pptx
D04_LLMs/: 20_model_chat_ollama.py  31_prompt_hub.py  50_parallel_chain.py  local_llm_use.py  tokenizer.py
D04_LLMs/structured_outputs/: structured_outputs.py
D05_PromptEng_Deployment/: lightning_intro_end.py  self_consistency_cot.py
D05_PromptEng_Deployment/Autoencoders/: Autoencoders_end.py
D05_PromptEng_Deployment/app/: app.py
scripts/computer_vision/: binary_classification.pt  binary_classification.py  image_preprocessing.py
scripts/first_model/: 10_modeling_start.py  20_modeling_with_batches.py  30_modeling_dataset_dataloader.py  40_modeling_data_sampling.py  50_modeling_parameter_study.py  data_prep.py  data_prep_christoph.py  exercise_regression.py  load_model.py  model001.pt
(+102 files in other folders)
