[project]
name = "aiengineering-2025-05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.19.0",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "langchain-community>=0.3.19",
    "langchain-groq>=0.2.5",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.3.8",
    "matplotlib>=3.10.1",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "pytorch-lightning>=2.5.0.post0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
    "ucimlrepo>=0.0.7",
    "ultralytics>=8.3.94",
]
